# wavedataplotter

./: .gitignore  README.md
Client1/: CMakeLists.txt  main.cpp  socketdataprinter.cpp  socketdataproviderif.h  socketreaderthread.cpp  socketreaderthread.h
client1/: CMakeLists.txt  main.cpp  socketdataprinter.cpp  socketdataprinter.h
client2/: CMakeLists.txt  controlchannel.cpp  controlchannel.h  controlchannelif.h  main.cpp  socketdataprinter.cpp  socketdataprinter.h
client2/unittest/: CMakeLists.txt  controlchannelmock.h  fakesocketreader.cpp  fakesocketreader.h  outputwritermock.h  testmain.cpp  testprinterbounds.cpp
common/inc/: dataoutputif.h  defaulttimestamp.h  defaultwriter.h  timestampproviderif.h
common/src/: defaulttimestamp.cpp  defaultwriter.cpp
